📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19430,5 +19430,133 @@
         "published": "Thu, 18 Dec 2025 10:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Big Pharma&#8217;s AI race extends across drug discovery, development, and clinical trials\u2014but AstraZeneca has distinguished itself by deploying AI clinical trials technology at an unprecedented public health scale.&#160; While competitors optimise internal R&#38;D pipelines, AstraZeneca&#8217;s AI is already embedded in national healthcare systems, screening hundreds of thousands of patients and demonstrating what happens when AI [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintel"
+    },
+    {
+        "id": "https://www.wired.com/story/phone-updates-used-to-be-annoying-the-latest-ios-is-awful/",
+        "title": "new Apple iOS update is wrecking my iPhone",
+        "link": "https://www.wired.com/story/phone-updates-used-to-be-annoying-the-latest-ios-is-awful/",
+        "published": "Thu, 18 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Is the latest iPhone operating system aesthetically appealing? No. But is it useful? Also no. At least I have company among the disgruntled."
+    },
+    {
+        "id": "https://www.wired.com/story/pumped-hydro-energy-storage-is-having-a-renaissance/",
+        "title": "Pumped Hydro Energy Storage Is Having a Renaissance",
+        "link": "https://www.wired.com/story/pumped-hydro-energy-storage-is-having-a-renaissance/",
+        "published": "Thu, 18 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "As the world looks to incorporate more renewables into energy grids, centuries-old systems that can balance supply and demand are being reappraised and innovated upon."
+    },
+    {
+        "id": "https://gizmodo.com/david-zaslav-could-make-so-much-money-out-of-messing-up-warner-bros-2000701077",
+        "title": "David Zaslav Could Make So Much Money Out of Messing Up Warner Bros.",
+        "link": "https://gizmodo.com/david-zaslav-could-make-so-much-money-out-of-messing-up-warner-bros-2000701077",
+        "published": "Thu, 18 Dec 2025 11:00:14 +0000",
+        "source": "Gizmodo",
+        "summary": "No matter which megacorp emerges as the studio's new owner, the Warner Bros. Discovery boss will likely rake in hundreds of millions."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-18-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 18, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-18-2025",
+        "published": "Thu, 18 Dec 2025 10:42:45 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-18-2025",
+        "title": "NYT Mini crossword answers, hints for December 18, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-18-2025",
+        "published": "Thu, 18 Dec 2025 10:35:44 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 18, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/the-ashes-live-stream-for-free",
+        "title": "How to watch the 2025-26 Ashes online for free",
+        "link": "https://mashable.com/article/the-ashes-live-stream-for-free",
+        "published": "Thu, 18 Dec 2025 10:32:24 +0000",
+        "source": "Mashable",
+        "summary": "How to watch The Ashes for free. Live stream the 2025-26 Ashes series for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-fitbit-versa-deal",
+        "title": "The Fitbit Versa 4 is down to its lowest-ever price at Amazon \u2014 save $80 right now",
+        "link": "https://mashable.com/article/dec-18-fitbit-versa-deal",
+        "published": "Thu, 18 Dec 2025 10:32:02 +0000",
+        "source": "Mashable",
+        "summary": "Find the best Fitbit deal at Amazon. Save 40% on the Fitbit Versa 4 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-roku-tv-deal",
+        "title": "The 2025 Roku Smart TV  is down to its lowest-ever price at Amazon \u2014 save $80 right now",
+        "link": "https://mashable.com/article/dec-18-roku-tv-deal",
+        "published": "Thu, 18 Dec 2025 10:29:20 +0000",
+        "source": "Mashable",
+        "summary": "Best TV deal at Amazon. Save 35% on the 40-inch Roku Smart TV 2025 at Amazon."
+    },
+    {
+        "id": "https://readwrite.com/paddy-power-betfair-must-pay-2-million-fine-after-social-responsibility-failures/",
+        "title": "Paddy Power Betfair must pay \u00a32 million fine after social responsibility failures",
+        "link": "https://readwrite.com/paddy-power-betfair-must-pay-2-million-fine-after-social-responsibility-failures/",
+        "published": "Thu, 18 Dec 2025 10:59:05 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Paddy Power\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Paddy-Power-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Four brands under the Flutter gambling arm will need to pay \u00a32 million in fines after social responsibility failures were&#8230; <a class=\"more-link\" href=\"https://readwrite.com/paddy-power-betfair-must-pay-2-million-fine-after-social-responsibil"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-waterproof-smartwatch/",
+        "title": "The best waterproof smartwatches of 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-waterproof-smartwatch/",
+        "published": "Thu, 18 Dec 2025 11:00:55 GMT",
+        "source": "Latest news",
+        "summary": "We researched and ranked the best waterproof smartwatches available from brands like Apple, Samsung, and Garmin. Check out our top picks below."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-read-a-battery-report-in-windows-11/",
+        "title": "Laptop battery dying too soon? How to check its health in one click",
+        "link": "https://www.zdnet.com/article/how-to-read-a-battery-report-in-windows-11/",
+        "published": "Thu, 18 Dec 2025 10:59:35 GMT",
+        "source": "Latest news",
+        "summary": "Windows 11 has a built-in report that provides insight into your laptop's battery health (and whether a replacement is needed)."
+    },
+    {
+        "id": "https://www.theargumentmag.com/p/how-getting-richer-made-teenagers",
+        "title": "How getting richer made teenagers less free",
+        "link": "https://www.theargumentmag.com/p/how-getting-richer-made-teenagers",
+        "published": "Thu, 18 Dec 2025 10:03:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46310823\">Comments</a>"
+    },
+    {
+        "id": "https://combo.cc/posts/its-all-about-momentum-innit/",
+        "title": "It's all about momentum",
+        "link": "https://combo.cc/posts/its-all-about-momentum-innit/",
+        "published": "Thu, 18 Dec 2025 10:09:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46310856\">Comments</a>"
+    },
+    {
+        "id": "https://e360.yale.edu/features/iran-water-drought-dams-qanats",
+        "title": "After Ruining a Treasured Water Resource, Iran Is Drying Up",
+        "link": "https://e360.yale.edu/features/iran-water-drought-dams-qanats",
+        "published": "Thu, 18 Dec 2025 10:27:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46310976\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/wall-street-ai-gains-are-here-banks-plan-for-fewer-people/",
+        "title": "Wall Street\u2019s AI gains are here \u2014 banks plan for fewer people",
+        "link": "https://www.artificialintelligence-news.com/news/wall-street-ai-gains-are-here-banks-plan-for-fewer-people/",
+        "published": "Thu, 18 Dec 2025 11:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>By December 2025, AI adoption on Wall Street had moved past experiments inside large US banks and into everyday operations. Speaking at a Goldman Sachs financial-services conference in New York on 9 December, bank executives described AI\u2014particularly generative AI\u2014as an operational upgrade already lifting productivity across engineering, operations, and customer service. The same discussion also [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/wall-street-ai"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/insurance-ai-use-operational-differences-experienced-by-the-big-players/",
+        "title": "Ensuring effective AI in insurance operations",
+        "link": "https://www.artificialintelligence-news.com/news/insurance-ai-use-operational-differences-experienced-by-the-big-players/",
+        "published": "Thu, 18 Dec 2025 10:47:50 +0000",
+        "source": "AI News",
+        "summary": "<p>Artificial intelligence has been part of the insurance sector for years \u2013 the Finance function in many businesses is often the first to automate. But what&#8217;s remarkable in the instance of AI is how directly the technology is woven into day-to-day operational work. Not sitting in the background as a niche modelling capability, AI is [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/insurance-ai-use-operational-differences-experienced-by-the-big-players/\">"
     }
 ]
