📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19558,5 +19558,173 @@
         "published": "Thu, 18 Dec 2025 10:47:50 +0000",
         "source": "AI News",
         "summary": "<p>Artificial intelligence has been part of the insurance sector for years \u2013 the Finance function in many businesses is often the first to automate. But what&#8217;s remarkable in the instance of AI is how directly the technology is woven into day-to-day operational work. Not sitting in the background as a niche modelling capability, AI is [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/insurance-ai-use-operational-differences-experienced-by-the-big-players/\">"
+    },
+    {
+        "id": "https://www.theverge.com/news/847149/apple-third-party-app-stores-payment-processing-ios-japan",
+        "title": "Apple opens iOS to third-party app stores in Japan",
+        "link": "https://www.theverge.com/news/847149/apple-third-party-app-stores-payment-processing-ios-japan",
+        "published": "2025-12-18T06:55:17-05:00",
+        "source": "The Verge",
+        "summary": "Apple has announced the changes it's making to the iOS App Store in Japan in order to comply with recent legislation in the country. It will allow third-party app stores and payment processing options, though is introducing new commission fees for those transactions. Developers in Japan will now be able to distribute apps on alternative [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-protein-powders/",
+        "title": "10 Best Protein Powders, According to 2 Years of Testing (2026)",
+        "link": "https://www.wired.com/gallery/best-protein-powders/",
+        "published": "Thu, 18 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "We found the best protein powders that won\u2019t make your shake taste like drywall."
+    },
+    {
+        "id": "https://www.wired.com/story/a-filmmaker-made-a-sam-altman-deepfake-and-got-unexpectedly-attached/",
+        "title": "A Filmmaker Made a Sam Altman Deepfake\u2014and Got Unexpectedly Attached",
+        "link": "https://www.wired.com/story/a-filmmaker-made-a-sam-altman-deepfake-and-got-unexpectedly-attached/",
+        "published": "Thu, 18 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The director of Deepfaking Sam Altman created a \u201cSam Bot\u201d when he couldn\u2019t get an interview with the OpenAI CEO. Watch an exclusive trailer for the documentary, which comes out in January."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-greens-powders/",
+        "title": "15 Best Greens Powders (2025) Researched, Taste-Tested & Reviewed",
+        "link": "https://www.wired.com/gallery/best-greens-powders/",
+        "published": "Thu, 18 Dec 2025 11:34:00 +0000",
+        "source": "WIRED",
+        "summary": "We did the research (and taste-testing) to find the best greens powders worth your money. The Bloom Nutrition Superfood Greens Powder is our tried-and-true pick."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/sony-settles-with-tencent-over-slavish-horizon-clone-120042886.html?src=rss",
+        "title": "Sony settles with Tencent over 'slavish' Horizon clone",
+        "link": "https://www.engadget.com/gaming/sony-settles-with-tencent-over-slavish-horizon-clone-120042886.html?src=rss",
+        "published": "Thu, 18 Dec 2025 12:00:42 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Earlier this year Sony <a href=\"https://www.engadget.com/gaming/sony-sues-tencent-over-its-horizon-zero-dawn-clone-191009077.html\">sued Tencent</a> for copyright infringement over its <em>Light of Motiram</em> game, calling it a &quot;slavish clone&quot; of Horizon Zero Dawn. Then, earlier this month, Tencent agreed to <a href=\"https://www.engadget.com/gaming/sony-sues-tencent-over-its-horizon-zero-dawn-clone-191009077.html\">stop promoting</a> and publicly testing the game. Now, the two compa"
+    },
+    {
+        "id": "https://gizmodo.com/star-wars-day-was-disneys-biggest-streaming-day-of-the-year-2000701092",
+        "title": "\u2018Star Wars\u2019 Day Was Disney\u2019s Biggest Streaming Day of the Year",
+        "link": "https://gizmodo.com/star-wars-day-was-disneys-biggest-streaming-day-of-the-year-2000701092",
+        "published": "Thu, 18 Dec 2025 12:00:21 +0000",
+        "source": "Gizmodo",
+        "summary": "'The Mandalorian' also joined the billion-hours-streamed club, but what does it all mean?"
+    },
+    {
+        "id": "https://mashable.com/article/rams-seahawks-nfl-2025-live-stream-for-free",
+        "title": "How to watch Rams vs. Seahawks in the NFL online for free",
+        "link": "https://mashable.com/article/rams-seahawks-nfl-2025-live-stream-for-free",
+        "published": "Thu, 18 Dec 2025 11:48:20 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NFL for free. Live stream the NFL for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/video/the-duffer-brothers-funko-dolls-stranger-things-ending",
+        "title": "The Duffer Brothers use Stranger Things Funko dolls to hint at how the show ends",
+        "link": "https://mashable.com/video/the-duffer-brothers-funko-dolls-stranger-things-ending",
+        "published": "Thu, 18 Dec 2025 11:27:57 +0000",
+        "source": "Mashable",
+        "summary": "The Duffer Brothers appeared on \"The Tonight Show\" and used Funko dolls to give a clue as to how the show might end."
+    },
+    {
+        "id": "https://mashable.com/article/new-to-streaming-december-18-2025",
+        "title": "Whats new to streaming this week? (Dec. 18, 2025)",
+        "link": "https://mashable.com/article/new-to-streaming-december-18-2025",
+        "published": "Thu, 18 Dec 2025 11:25:47 +0000",
+        "source": "Mashable",
+        "summary": "What's new to streaming on Netflix, Prime Video, HBO Max, and more for the week of Dec. 18, 2025?"
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-jbl-tune-770nc-headphones-deal",
+        "title": "Score JBL Tune 770NC headphones at their best-ever price at Amazon \u2014 save $70 right now",
+        "link": "https://mashable.com/article/dec-18-jbl-tune-770nc-headphones-deal",
+        "published": "Thu, 18 Dec 2025 11:22:13 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, the JBL Tune 770NC headphones are still at their lowest-ever price of $79.95 at Amazon, 47% off their list price of $149.95."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-magic-the-gathering-tmnt-play-booster-box-deal",
+        "title": "The Magic: The Gathering Teenage Mutant Ninja Turtles Play Booster Box is now below market value at Amazon",
+        "link": "https://mashable.com/article/dec-18-magic-the-gathering-tmnt-play-booster-box-deal",
+        "published": "Thu, 18 Dec 2025 11:15:30 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 16, Magic: The Gathering \u2014 Teenage Mutant Ninja Turtles Play Booster Box pre-order is below market value at Amazon."
+    },
+    {
+        "id": "https://readwrite.com/kalshi-files-to-self-certify-a-contract-that-would-allow-users-to-be-on-college-athletes/",
+        "title": "Kalshi files to self-certify a contract that would allow users to be on college athletes",
+        "link": "https://readwrite.com/kalshi-files-to-self-certify-a-contract-that-would-allow-users-to-be-on-college-athletes/",
+        "published": "Thu, 18 Dec 2025 11:56:42 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"College football\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/College-football-300x200.jpeg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A new filing from Kalshi to self-certify a contract suggests that the prediction market could be planning to offer bets&#8230; <a class=\"more-link\" href=\"https://readwrite.com/kalshi-files-to-self-certify-a-contract-that-would-allow-us"
+    },
+    {
+        "id": "https://readwrite.com/us-congressman-raises-concerns-about-kalshi-cnn-partnership-in-public-letter/",
+        "title": "US Congressman raises concerns about Kalshi/CNN partnership in public letter",
+        "link": "https://readwrite.com/us-congressman-raises-concerns-about-kalshi-cnn-partnership-in-public-letter/",
+        "published": "Thu, 18 Dec 2025 11:10:56 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Congressman Abe Hamadeh\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Congressman-Abe-Hamadeh-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Congressman Abe Hamadeh has shared concerns about the partnership between Kalshi and CNN, highlighting &#8220;threats to market integrity, democratic stability,&#8230; <a class=\"more-link\" href=\"https://readwrite.com/us-co"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-micro-rgb-tv-oled-ces/",
+        "title": "LG's first Micro RGB TV arrives ahead of CES 2026, and it's already turning heads",
+        "link": "https://www.zdnet.com/article/lg-micro-rgb-tv-oled-ces/",
+        "published": "Thu, 18 Dec 2025 12:07:00 GMT",
+        "source": "Latest news",
+        "summary": "LG's upcoming flagship TV model combines mini LEDs, AI-powered processing, and advanced dimming to deliver a new tier of visual fidelity."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-soundbars-dolby-ces-26/",
+        "title": "LG's new home theater systems may be the ultimate Dolby Atmos flex at CES 2026",
+        "link": "https://www.zdnet.com/article/lg-soundbars-dolby-ces-26/",
+        "published": "Thu, 18 Dec 2025 11:55:00 GMT",
+        "source": "Latest news",
+        "summary": "LG has announced a series of new speakers and soundbars, all of which support the brand's new Sound Suite tech."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-turn-off-windows-security-and-why/",
+        "title": "Is turning off Windows Security a bad idea? A PC expert's practical rule of thumb",
+        "link": "https://www.zdnet.com/article/how-to-turn-off-windows-security-and-why/",
+        "published": "Thu, 18 Dec 2025 11:48:00 GMT",
+        "source": "Latest news",
+        "summary": "There are situations where you may want to temporarily disable Windows' built-in security feature. I'll show you how to do it safely."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-aspire-16-laptop-review/",
+        "title": "I thought 16-inch laptops were excessive for work travel, but this model is a big exception",
+        "link": "https://www.zdnet.com/article/acer-aspire-16-laptop-review/",
+        "published": "Thu, 18 Dec 2025 11:47:00 GMT",
+        "source": "Latest news",
+        "summary": "The latest Acer Aspire 16 delivers solid performance and long-lasting battery life at a price I can't be mad about."
+    },
+    {
+        "id": "https://blog.jakobschwichtenberg.com/p/slowness-is-a-virtue",
+        "title": "Slowness Is a Virtue",
+        "link": "https://blog.jakobschwichtenberg.com/p/slowness-is-a-virtue",
+        "published": "Thu, 18 Dec 2025 10:44:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46311092\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/hr-ai-in-human-resources-the-real-operational-impact/",
+        "title": "AI in Human Resources: the real operational impact",
+        "link": "https://www.artificialintelligence-news.com/news/hr-ai-in-human-resources-the-real-operational-impact/",
+        "published": "Thu, 18 Dec 2025 12:04:01 +0000",
+        "source": "AI News",
+        "summary": "<p>Human Resources is an area in many organisations where AI can have significant operational impact. The technology is now being embedded into day-to-day operations, in activities like answering employees&#8217; questions and supporting training. The clearest impact appears where organisations can measure the tech&#8217;s outcomes, typically in time saved and the numbers of queries successfully resolved. [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/hr-ai-i"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/18/1130106/the-8-worst-technology-flops-of-2025/",
+        "title": "The 8 worst technology flops of 2025",
+        "link": "https://www.technologyreview.com/2025/12/18/1130106/the-8-worst-technology-flops-of-2025/",
+        "published": "Thu, 18 Dec 2025 12:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Welcome to our annual list of the worst, least successful, and simply dumbest technologies of the year. This year, politics was a recurring theme. Donald Trump swept back into office and used his executive pen to reshape the fortunes of entire sectors, from renewables to cryptocurrency. The wrecking-ball act began even before his inauguration, when&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/18/1130102/ai-materials-discovery/",
+        "title": "Can AI really help us discover new materials?",
+        "link": "https://www.technologyreview.com/2025/12/18/1130102/ai-materials-discovery/",
+        "published": "Thu, 18 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Judging from headlines and social media posts in recent years, one might reasonably assume that AI is going to fix the power grid, cure the world\u2019s diseases, and finish my holiday shopping for me. But maybe there\u2019s just a whole lot of hype floating around out there. This week, we published a new package called&#8230;"
     }
 ]
