📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19726,5 +19726,93 @@
         "published": "Thu, 18 Dec 2025 11:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "Judging from headlines and social media posts in recent years, one might reasonably assume that AI is going to fix the power grid, cure the world\u2019s diseases, and finish my holiday shopping for me. But maybe there\u2019s just a whole lot of hype floating around out there. This week, we published a new package called&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/news/847159/trump-media-tae-technologies-merger-nuclear-fusion",
+        "title": "Trump Media is merging with a nuclear fusion company",
+        "link": "https://www.theverge.com/news/847159/trump-media-tae-technologies-merger-nuclear-fusion",
+        "published": "2025-12-18T08:06:16-05:00",
+        "source": "The Verge",
+        "summary": "Trump Media, the company that runs social network Truth Social, is pivoting to nuclear fusion. It has announced a merger with California-based fusion power company TAE Technologies, and plans to start construction on a fusion power plant in 2026. Trump Media &#38; Technology Group will become the holding company of the new organization, though shareholders [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/845890/ai-companies-rebrand-agi-artificial-general-intelligence",
+        "title": "It\u2019s the great AGI rebrand",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/845890/ai-companies-rebrand-agi-artificial-general-intelligence",
+        "published": "2025-12-18T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The cringe comes for us all, and for all our hot new turns of phrase. \"Rizz\" lost its luster when grandparents started asking about its meaning. Teachers who dressed up as \"6-7\" on Halloween drove a nail into the coffin of Gen Alpha's rallying cry. And tech CEOs who once trumpeted the quest for \"artificial [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/ten-years-ago-spacex-turned-tragedy-into-triumph-with-a-historic-rocket-landing/",
+        "title": "The inside story of SpaceX\u2019s historic rocket landing that changed launch forever",
+        "link": "https://arstechnica.com/space/2025/12/ten-years-ago-spacex-turned-tragedy-into-triumph-with-a-historic-rocket-landing/",
+        "published": "Thu, 18 Dec 2025 12:00:22 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"It's hard to describe how epic this comeback was after our first Falcon 9 launch failure.\""
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-airpods-pro-3-are-back-on-sale-for-a-record-low-of-199-222806371.html?src=rss",
+        "title": "The AirPods Pro 3 are back on sale for a record low of $199",
+        "link": "https://www.engadget.com/deals/the-airpods-pro-3-are-back-on-sale-for-a-record-low-of-199-222806371.html?src=rss",
+        "published": "Thu, 18 Dec 2025 13:13:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>No need to fret if you missed out on some of the best Black Friday deals this year \u2014 some of them have returned already. Case in point: <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQFB8FMG&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=42f7f263-d7c8-4a21-ad07-9121207a6244&amp;featureId=text-link&amp;merchantName=Amazon&amp;linkText=Apple%27s+AirPods+Pro+3&amp;custData=eyJzb3VyY2VOYW1lIjo"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/ultrahuman-brings-snoring-detection-and-respiratory-health-tracking-to-the-ring-air-130054901.html?src=rss",
+        "title": "Ultrahuman brings snoring detection and respiratory health tracking to the Ring Air",
+        "link": "https://www.engadget.com/wearables/ultrahuman-brings-snoring-detection-and-respiratory-health-tracking-to-the-ring-air-130054901.html?src=rss",
+        "published": "Thu, 18 Dec 2025 13:00:54 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Ultrahuman Ring Air now has the capacity to track snoring and general respiratory health. This is thanks to proprietary technology called Respiratory Health PowerPlug, which is basically a suite of audio analysis tools along with some &quot;advanced biomarker tracking&quot; and AI tomfoolery.</p>\n<p>All of this results in &quot;one of the most comprehensive consumer tools ever built for understanding nighttime respiratory stability.&quot; It details snoring sessions, of course, but also d"
+    },
+    {
+        "id": "https://www.engadget.com/apps/the-ftc-is-reportedly-investigating-instacart-over-its-ai-pricing-tool-130000472.html?src=rss",
+        "title": "The FTC is reportedly investigating Instacart over its AI pricing tool",
+        "link": "https://www.engadget.com/apps/the-ftc-is-reportedly-investigating-instacart-over-its-ai-pricing-tool-130000472.html?src=rss",
+        "published": "Thu, 18 Dec 2025 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Federal Trade Commission has sent Instacart a civil investigative demand, seeking information about its AI-powered pricing tool, according to <a class=\"link\" href=\"https://www.reuters.com/legal/litigation/ftc-investigating-instacarts-ai-pricing-tool-source-says-2025-12-17/\" target=\"_blank\"><em>Reuters</em></a>. This comes after a recently published <a class=\"link\" href=\"https://www.engadget.com/big-tech/study-shows-that-instacart-was-charging-different-amounts-for-the-same-items-165108224"
+    },
+    {
+        "id": "https://mashable.com/article/apple-ios-notification-forwarding-eu",
+        "title": "Apples new iOS feature is huge for people with non-Apple smartwatches",
+        "link": "https://mashable.com/article/apple-ios-notification-forwarding-eu",
+        "published": "Thu, 18 Dec 2025 12:27:09 +0000",
+        "source": "Mashable",
+        "summary": "A new, EU-only feature called Notification Forwarding allows the iPhone to forward notifications to a third-party watch."
+    },
+    {
+        "id": "https://readwrite.com/two-women-arrested-for-allegedly-running-a-sarasota-gambling-house/",
+        "title": "Two women arrested for allegedly running a Sarasota gambling house",
+        "link": "https://readwrite.com/two-women-arrested-for-allegedly-running-a-sarasota-gambling-house/",
+        "published": "Thu, 18 Dec 2025 13:04:16 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Paradise Arcade, Sarasota\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Paradise-Arcade-Sarasota-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Two women have been arrested and charged with allegedly running an illegal gambling house in Sarasota. Two women, 48-year-old Kelly&#8230; <a class=\"more-link\" href=\"https://readwrite.com/two-women-arrested-for-allegedl"
+    },
+    {
+        "id": "https://www.zdnet.com/article/chainguard-emeritoss-support-for-abandoned-open-source-programs/",
+        "title": "Did maintainers abandon your critical open-source tool? This rescue plan offers a lifeline",
+        "link": "https://www.zdnet.com/article/chainguard-emeritoss-support-for-abandoned-open-source-programs/",
+        "published": "Thu, 18 Dec 2025 13:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Your open-source stack doesn't have to fall apart. Chainguard EmeritOSS will patch dying tools - and prevent them from becoming security risks."
+    },
+    {
+        "id": "https://krebsonsecurity.com/2025/12/most-parked-domains-now-serving-malicious-content/",
+        "title": "Most Parked Domains Now Serving Malicious Content",
+        "link": "https://krebsonsecurity.com/2025/12/most-parked-domains-now-serving-malicious-content/",
+        "published": "Thu, 18 Dec 2025 12:50:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46312021\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/18/1130128/the-download-the-worst-technology-of-2025-and-sam-altmans-ai-hype/",
+        "title": "The Download: the worst technology of 2025, and Sam Altman\u2019s AI hype",
+        "link": "https://www.technologyreview.com/2025/12/18/1130128/the-download-the-worst-technology-of-2025-and-sam-altmans-ai-hype/",
+        "published": "Thu, 18 Dec 2025 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. The 8 worst technology flops of 2025 Welcome to our annual list of the worst, least successful, and simply dumbest technologies of the year. We like to think there\u2019s a lesson in every&#8230;"
     }
 ]
